5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4374/executions/1577_2896.log
== TEST (2019-03-21 19:14:32) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(nathanael)

# Impressao de saidas
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(nathanael)
NameError: name 'nathanael' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:08:25) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(nathanael)

# Impressao de saidas
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(nathanael)
NameError: name 'nathanael' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:09:45) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("nathanael")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:10:03) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("nathanael")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.14448
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
